# c2tam

./: README.md  rosdep.yaml  stack.xml
c2tam_mapping/: C2TAM.license  C2TAMmapping  CMakeLists.txt  camera.cfg  mainpage.dox  manifest.xml  package.xml  settings_custom.cfg
c2tam_mapping/cmake_modules/: FindCVD.cmake  FindTooN.cmake
c2tam_mapping/include/: ATANCamera.h  KeyFrame.h  Map.h  MapMaker.h  MapObject.h  MapPoint.h  MapViewer.h  OpenGL.h  PatchFinder.h  Relocaliser.h  System.h  TrackerData.h  VideoSource.h
c2tam_mapping/launch/: server.launch
c2tam_mapping/src/: ATANCamera.cc  Bundle.cc  GLWindow2.cc  Map.cc  MapMaker.cc  MapViewer.cc  PatchFinder.cc  Relocaliser.cc  System.cc  main.cc
c2tam_msgs/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
c2tam_msgs/msg/: AddKeyFrame.msg  Candidate.msg  CreateOctomap.msg  DataPoints.msg  DenseInfo.msg  DenseKf.msg  File.msg  Index.msg  KeyFrame.msg  KeyFramePoseList.msg  ListModPoints.msg  LoadInfo.msg  LoadPoint.msg  MapInfo.msg  MapObject.msg  MapPoints.msg  MeasPoint.msg  Measurement.msg  ModPoint.msg  NewInfo.msg  ObjectFinded.msg  ObjectTransform.msg  ObjectTransformArray.msg  Point.msg  Point2d.msg  PoseKeyFrame.msg  RgbdInfo.msg  SemanticInfo.msg  SemanticKeyFrame.msg  Surf.msg  SurfPoint.msg  VCandidates.msg  VSurf.msg
c2tam_srvs/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
c2tam_srvs/srv/: AttemptRecovery.srv  GetId.srv  GetMapObjects.srv  GetOctomap.srv  InitFromRGBD.srv  InitFromStereoEKF.srv  LoadDrawingModel.srv  LoadIdMap.srv  LoadMap.srv  LoadVslamMap.srv  QueueSize.srv  RequestReset.srv  RunVslam.srv  SaveEnvironment.srv  SaveMap.srv  SearchForMap.srv  SetMetaObjects.srv  SetObjects.srv
c2tam_tracking/: C2TAMtracking  CMakeLists.txt  camera.cfg  install-external.sh  mainpage.dox  manifest.xml  package.xml  settings_custom.cfg
c2tam_tracking/include/: ATANCamera.h  AddKeyFrame.h  KeyFrame.h  Map.h  MapPoint.h  MapViewer.h  System.h  Tracker.h  VisualizationManager.h
c2tam_tracking/launch/: camera_parameters.yaml  client.launch  salida.txt  salida2.txt
c2tam_tracking/src/: ATANCamera.cc  AddKeyFrame.cc  GLWindow2.cc  KeyFrame.cc  Map.cc  MapViewer.cc  Relocaliser.cc  SmallBlurryImage.cc  System.cc  Tracker.cc  VisualizationManager.cc  main.cc
c2tam_visualizer/: C2TAM.license  C2TAMvisualizer  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
c2tam_visualizer/cmake_modules/: FindGVars3.cmake
c2tam_visualizer/include/: ARDriver.h  GLWindow2.h  KeyFrame.h  Map.h  MapMaker.h  MapObject.h  MapViewer.h  OpenGL.h  PatchFinder.h  Relocaliser.h  Visualizer.h
c2tam_visualizer/launch/: visualizer.launch
c2tam_visualizer/src/: ARDriver.cc  ATANCamera.cc  CalibCornerPatch.cc  KeyFrame.cc  Map.cc  MapMaker.cc  MapViewer.cc  PatchFinder.cc  Relocaliser.cc  Visualizer.cc  main.cc
