<package>

  <name>c2tam_srvs</name>

  <version>2.0.0</version>

  <description>c2tam_srvs</description>

  <maintainer email="riazuelo@unizar.es">Luis Riazuelo</maintainer>

  <license>See C2TAM.license</license>

  <url type="website">https://github.com/lriazuelo/c2tam</url>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>c2tam_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>c2tam_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>


</package>


