<?xml version="1.0"?>
<package>

  	<name>c2tam_tracking</name>

  	<version>2.0.0</version>

  	<description>c2tam_tracking</description>

  	<maintainer email="riazuelo@unizar.es">Luis Riazuelo</maintainer>

  	<license>See C2TAM.license</license>

  	<url type="website">https://github.com/lriazuelo/c2tam</url>


 	<buildtool_depend>catkin</buildtool_depend>

   	<build_depend>roscpp</build_depend>
   	<build_depend>geometry_msgs</build_depend>
   	<build_depend>sensor_msgs</build_depend>
   	<build_depend>nav_msgs</build_depend>
   	<build_depend>std_msgs</build_depend>
   	<build_depend>cv_bridge</build_depend>
   	<build_depend>image_transport</build_depend>
   	<build_depend>tf</build_depend>
   	<build_depend>pcl_ros</build_depend>
  	<build_depend>pcl_conversions</build_depend>
   	<build_depend>pcl_msgs</build_depend>
   	<build_depend>message_filters</build_depend>
   	<build_depend>c2tam_msgs</build_depend>
   	<build_depend>c2tam_srvs</build_depend>
   	<build_depend>opencv2</build_depend>
  	<build_depend>libpcl-all-dev</build_depend>
  
   	<run_depend>roscpp</run_depend>
  	<run_depend>geometry_msgs</run_depend>
   	<run_depend>sensor_msgs</run_depend>
   	<run_depend>nav_msgs</run_depend>
   	<run_depend>std_msgs</run_depend>
   	<run_depend>cv_bridge</run_depend>
   	<run_depend>image_transport</run_depend>
   	<run_depend>tf</run_depend>
   	<run_depend>pcl_ros</run_depend>
   	<run_depend>pcl_conversions</run_depend>
   	<run_depend>pcl_msgs</run_depend>
   	<run_depend>message_filters</run_depend>
   	<run_depend>c2tam_msgs</run_depend>
   	<run_depend>c2tam_srvs</run_depend>
   	<run_depend>opencv2</run_depend>
	<run_depend>libpcl-all</run_depend>


	<build_depend>fort</build_depend>
	<build_depend>libatlas-base-dev</build_depend>
	<build_depend>libraw1394-11</build_depend>
	<build_depend>libraw1394-dev</build_depend>

   	<run_depend>fort</run_depend>
   	<run_depend>libatlas-base-dev</run_depend>
   	<run_depend>libraw1394-11</run_depend>
   	<run_depend>libraw1394-dev</run_depend>

 
	<export>
	</export>

</package>


