<?xml version="1.0"?>
<package>

  	<name>c2tam_visualizer</name>

  	<version>2.0.0</version>

  	<description>c2tam_visualizer</description>

  	<maintainer email="riazuelo@unizar.es">Luis Riazuelo</maintainer>

  	<license>See C2TAM.license</license>

  	<url type="website">https://github.com/lriazuelo/c2tam</url>


 	<buildtool_depend>catkin</buildtool_depend>

   	<build_depend>roscpp</build_depend>
   	<build_depend>geometry_msgs</build_depend>
   	<build_depend>sensor_msgs</build_depend>
   	<build_depend>nav_msgs</build_depend>
   	<build_depend>std_msgs</build_depend>
   	<build_depend>cv_bridge</build_depend>
   	<build_depend>opencv2</build_depend>
   	<build_depend>image_transport</build_depend>
   	<build_depend>c2tam_msgs</build_depend>
   	<build_depend>c2tam_srvs</build_depend>
	<build_depend>c2tam_tracking</build_depend>

  	<run_depend>roscpp</run_depend>
   	<run_depend>geometry_msgs</run_depend>
   	<run_depend>sensor_msgs</run_depend>
   	<run_depend>nav_msgs</run_depend>
   	<run_depend>std_msgs</run_depend>
   	<run_depend>cv_bridge</run_depend>
   	<run_depend>opencv2</run_depend>
   	<run_depend>image_transport</run_depend>
   	<run_depend>c2tam_msgs</run_depend>
   	<run_depend>c2tam_srvs</run_depend>

	<export>
	</export>

</package>


